istio/virtual-services/dev-inventory-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: inventory-retry
  namespace: dev
spec:
  hosts:
    - inventory
    - inventory.dev.svc.cluster.local
  http:
    - route:
        - destination:
            host: inventory
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure,retriable-4xx
      timeout: 10s
