istio/virtual-services/dev-order-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-retry
  namespace: dev
spec:
  hosts:
    - order
    - order.dev.svc.cluster.local
  http:
    - route:
        - destination:
            host: order
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure,retriable-4xx
      timeout: 10s
