istio/virtual-services/dev-product-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: product-retry
  namespace: dev
spec:
  hosts:
    - product.dev.svc.cluster.local
  http:
    - route:
        - destination:
            host: product.dev.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure,retriable-4xx
      timeout: 10s
